$Id: NEWS,v 1.195 2002-06-26 02:54:40 castaglia Exp $

CVS
---------------------------------
- Bug 1407 - Removed unnecessary check for prior PORT/PASV in STOR
             PRE_CMD handler (RETR PRE_CMD handler did not have these checks)
- Added new Define, <IfDefine>, <IfModule> configuration directives, new
  command-line option -D (a la Apache)
- Bug 1556 - Restructuring the way signals are handled, so that signal handling
             functions are executed synchronously, not asynchronously
- Bug 1463 - Added reporting of dispatching to auth handlers at debug level 6
- Bug 1258 - Added STOU command handler
- Bug 1534 - Added LFS support
- Bug 1647 - Changed unnecessary use of umode_t to mode_t in mod_ls.
- Bug 1650 - Mergedown bug with LsDefaultOptions directive fixed.
- Bug 1306 - Added a TimeoutSession directive that can be used to set a maximum
             time limit on an entire session.
- Bug 1643 - Cleaned up several source code files.
- Bug 1569 - Cygwin support, added README.cygwin
- Bug 1171 - Added handling backslash-escaped newlines in configuration files,
             so that a directive can be split across multiple lines using
             a trailing \ before the newline character.
- Removed the deprecated AllowChmod and ShowDotFiles configuration directives.
- Bug 1655 - Added support for a -n option when listing directories.
- Bug 1502 - Added a lingering_close function.  As discussed in the bug
             report, this may cause issues with some clients; keep an eye
             for this, as the timeout (ten minutes) may be too long or short.

1.2.5 - Released 2002-06-08
---------------------------------
New mod_sql (4.08)
- Bug 1379 - Changed mod_sql.c to use memset() instead of bzero()
- Bug 1576 - Checks for a NULL pointer in a border case involving use of
             SQLHomedirOnDemand
- Bug 1586 - Fixed bad assumption concerning row count involving SQL-provided
             group information